Fix letter spacing of primary text in blog posts

--- a/src/templates/blog-template-css.css
+++ b/src/templates/blog-template-css.css
@@ -10,6 +10,7 @@
   font-family: var(--primary-type-heading);
   font-size: 37.8px;
   line-height: 38px;
+  letter-spacing: -1px;
   margin-bottom: 5px;
 }
 
